--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/CreateEdit.cshtml
@@ -58,10 +58,11 @@
                                                 @Html.LabelFor(x => x.EmployeeId, new { @class = "form-label required" })
                                                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                    {
-                                       DropdownType = DropdownTypeEnum.UnAssociatedEmployeeList.ToString(),
+                                       DropdownType = DropdownTypeEnum.UnAssociatedTrainerEmployeeList.ToString(),
                                        DropdownName = "EmployeeId",
                                        DropdownSelectedValue = Model.EmployeeId
                                         .ToString(),
+                                        IsRequired=true,
                                        Parameter = !string.IsNullOrEmpty(Model.SelectedCentreCode) ? $"{Model.SelectedCentreCode}~{Model.SelectedDepartmentId}" : ""
 
                                    })
