--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     string applicationLogoBackground = CoditechAdminSettings.ApplicationLogoBackground;
     string applicationLayoutBackground = CoditechAdminSettings.ApplicationLayoutBackground;
     string applicationTitle = CoditechAdminSettings.ApplicationTitle;
+    string dashboardUrl = CoditechAdminSettings.DashboardUrl;
     TempData.Remove("Notifications");
 }
 <!DOCTYPE html>
@@ -49,7 +50,7 @@
         <div class="topbar">
             <!-- LOGO -->
             <div class="brand" style="background-color:@applicationLogoBackground !important">
-                <a href="~/Dashboard/Index" class="logo">
+                <a href="~@dashboardUrl" class="logo">
                     <span>
                         <img src="@applicationLogoPath" alt="logo-small" class="logo-sm">
                     </span>
