--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/CreateEdit.cshtml
@@ -81,6 +81,21 @@
                                             @Html.ValidationMessageFor(x => x.TrainerSpecializationEnumId)
                                         </div>
                                     </div>
+
+                                    @if (Model.GeneralTrainerMasterId <=0)
+                                    {
+                                        @Html.HiddenFor(x => x.UniqueCode)
+                                    }
+                                    else
+                                    {
+                                        <div class="col-lg-6">
+                                            <div class="mb-3">
+                                                @Html.LabelFor(x => x.UniqueCode, new { @class = "form-label" })
+                                                @Html.TextBoxFor(x => x.UniqueCode, new { @class = "form-control", @readonly = "true" })
+                                                @Html.ValidationMessageFor(x => x.UniqueCode)
+                                            </div>
+                                        </div>
+                                    }
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
