--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/_List.cshtml
@@ -41,6 +41,7 @@
                             </td>
                             <td>@item.TrainerSpecialization</td>
                             <td>@item.NumberOfTraineeAssociated</td>
+                            <td>@item.UniqueCode</td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?generalTrainerId=@item.GeneralTrainerMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../EmployeeMaster/UpdateEmployeePersonalDetails?employeeId=@item.EmployeeId&personId=@item.PersonId" title="View" class="btn btn-sm btn-soft-warning btn-circle me-2"> <i class="fas fa-eye" style="color: orange;"></i></a>
