--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
         <div class="topbar">
             <!-- LOGO -->
             <div class="brand" style="background-color:@applicationLogoBackground !important">
-                <a href="~@dashboardUrl" class="logo">
+                <a href="..@dashboardUrl" class="logo">
                     <span>
                         <img src="@applicationLogoPath" alt="logo-small" class="logo-sm">
                     </span>
