Code Correction Changes

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableStatusData.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableStatusData.cshtml
@@ -9,6 +9,7 @@
             "submittedforapproval" => "primary",
             "submitted" => "primary",
             "inreview" => "info",
+            "pending" => "info",
             "needchanges" => "danger",
             "completed" => "success",
             "closed" => "success",
