--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/ChangePassword.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/ChangePassword.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Change Password";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    string dashboardUrl = CoditechAdminSettings.DashboardUrl;
 }
 <div class="container login-page-wrapper">
     <div class="row vh-100 d-flex justify-content-center">
@@ -57,7 +58,7 @@
                                         <div class="form-group mb-0 row">
                                             <div class="col-12">
                                                 <button class="btn btn-primary w-100 waves-effect waves-light">Change Password<i class="fas fa-sign-in-alt ms-1"></i></button>
-                                                <a href="../dashboard/index" class="btn btn-secondary w-100 waves-effect waves-light mt-2"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                                                <a href="..@dashboardUrl" class="btn btn-secondary w-100 waves-effect waves-light mt-2"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                                             </div>
                                         </div>
                                     }
