--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
@@ -9,6 +9,11 @@
 @Html.HiddenFor(m => m.PhotoMediaId)
 @Html.HiddenFor(m => m.PhotoMediaFileName, new { id = "PhotoMediaFileName" })
 @Html.HiddenFor(m => m.PhotoMediaPath, new { id = "PhotoMediaPath" })
+@Html.HiddenFor(m => m.Custom1)
+@Html.HiddenFor(m => m.Custom2)
+@Html.HiddenFor(m => m.Custom3)
+@Html.HiddenFor(m => m.Custom4)
+@Html.HiddenFor(m => m.Custom5)
 <div class="row">
     <div class="col-lg-3">
         <div class="mb-3">
