--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymDashboard/GymOperatorDashboard.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymDashboard/GymOperatorDashboard.cshtml
@@ -93,74 +93,82 @@
         <div class="row justify-content-center">
             <div class="col-md-6 col-lg-3">
                 <div class="card report-card">
-                    <div class="card-body">
-                        <div class="row d-flex justify-content-center">
-                            <div class="col">
-                                <p class="text-dark mb-0 fw-semibold">Active Member</p>
-                                <h3 class="m-0">@Model.ActiveMemberCount</h3>
-                                <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
-                            </div>
-                            <div class="col-auto align-self-center">
-                                <div class="report-main-icon bg-light-alt">
-                                    <i class="fas fa-user-check"></i>
+                    <a href="../gymmemberdetails/activememberlist">
+                        <div class="card-body">
+                            <div class="row d-flex justify-content-center">
+                                <div class="col">
+                                    <p class="text-dark mb-0 fw-semibold">Active Member</p>
+                                    <h3 class="m-0">@Model.ActiveMemberCount</h3>
+                                    <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
+                                </div>
+                                <div class="col-auto align-self-center">
+                                    <div class="report-main-icon bg-light-alt">
+                                        <i class="fas fa-user-check"></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div><!--end card-body-->
+                        </div><!--end card-body-->
+                    </a>
                 </div><!--end card-->
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card report-card">
-                    <div class="card-body">
-                        <div class="row d-flex justify-content-center">
-                            <div class="col">
-                                <p class="text-dark mb-0 fw-semibold">InActive Member</p>
-                                <h3 class="m-0">@Model.InActiveMemberCount</h3>
-                                <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
-                            </div>
-                            <div class="col-auto align-self-center">
-                                <div class="report-main-icon bg-light-alt">
-                                    <i class="fas fa-user-minus"></i>
+                    <a href="../gymmemberdetails/inactivememberlist">
+                        <div class="card-body">
+                            <div class="row d-flex justify-content-center">
+                                <div class="col">
+                                    <p class="text-dark mb-0 fw-semibold">InActive Member</p>
+                                    <h3 class="m-0">@Model.InActiveMemberCount</h3>
+                                    <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
+                                </div>
+                                <div class="col-auto align-self-center">
+                                    <div class="report-main-icon bg-light-alt">
+                                        <i class="fas fa-user-minus"></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div><!--end card-body-->
+                        </div><!--end card-body-->
+                    </a>
                 </div><!--end card-->
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card report-card">
-                    <div class="card-body">
-                        <div class="row d-flex justify-content-center">
-                            <div class="col">
-                                <p class="text-dark mb-0 fw-semibold">Total Register Member</p>
-                                <h3 class="m-0">@Model.TotalMemberCount</h3>
-                                <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
-                            </div>
-                            <div class="col-auto align-self-center">
-                                <div class="report-main-icon bg-light-alt">
-                                    <i class="fas fa-user-friends"></i>
+                    <a href="../gymmemberdetails/list">
+                        <div class="card-body">
+                            <div class="row d-flex justify-content-center">
+                                <div class="col">
+                                    <p class="text-dark mb-0 fw-semibold">Total Registered Member</p>
+                                    <h3 class="m-0">@Model.TotalMemberCount</h3>
+                                    <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
+                                </div>
+                                <div class="col-auto align-self-center">
+                                    <div class="report-main-icon bg-light-alt">
+                                        <i class="fas fa-user-friends"></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div><!--end card-body-->
+                        </div><!--end card-body-->
+                    </a>
                 </div><!--end card-->
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card report-card">
-                    <div class="card-body">
-                        <div class="row d-flex justify-content-center">
-                            <div class="col">
-                                <p class="text-dark mb-0 fw-semibold">Total Leads</p>
-                                <h3 class="m-0">@AdminGeneralHelper.FormatPriceWithCurrency(@Model.TotalLeads)</h3>
-                                <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
-                            </div>
-                            <div class="col-auto align-self-center">
-                                <div class="report-main-icon bg-light-alt">
-                                    <i class="fas fa-bullhorn"></i>
+                    <a href="../generalleadgenerationmaster/list">
+                        <div class="card-body">
+                            <div class="row d-flex justify-content-center">
+                                <div class="col">
+                                    <p class="text-dark mb-0 fw-semibold">Total Leads</p>
+                                    <h3 class="m-0">@Model.TotalLeads</h3>
+                                    <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
+                                </div>
+                                <div class="col-auto align-self-center">
+                                    <div class="report-main-icon bg-light-alt">
+                                        <i class="fas fa-bullhorn"></i>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div><!--end card-body-->
+                        </div><!--end card-body-->
+                    </a>
                 </div><!--end card-->
             </div>
             <div class="col-md-6 col-lg-3">
