--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableShowResult.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableShowResult.cshtml
@@ -13,7 +13,7 @@
     <div class="dataTables_length">
         <label>
             Show
-            <select id="DataTables_PageSizeId" aria-controls="datatable" class="form-select form-select-sm" onchange="CoditechDataTable.LoadList('@controllerName','@actionName')">
+            <select id="DataTables_PageSizeId" aria-controls="datatable" class="form-select form-select-sm" onchange="CoditechDataTable.LoadListFirst('@controllerName','@actionName')">
                 @foreach (var i in showList)
                 {
                     if (Model == i)
