GMSD-384:MEDIA - Folder Name Not Displayed in "Move Folder" Popup in Media Module.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/MediaUpload.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/MediaUpload.cshtml
@@ -127,7 +127,7 @@
             };
 
             document.getElementById('moveFolder').onclick = function () {
-                openMoveFolderModal(folderId);
+                openMoveFolderModal(folderId, folderName);
                 menu.style.display = 'none';
             };
 
@@ -155,9 +155,10 @@
             $('#mediaId').val(mediaId);
         }
 
-        function openMoveFolderModal(folderId) {
+        function openMoveFolderModal(folderId, RootFolderName) {
             $('#moveFolderModal').modal('show');
             $('#moveFolderId').val(folderId);
+            $('#moveFolderRootFolderNameId').html("").html(RootFolderName);
 
             CoditechCommon.ShowLodder();
             // Fetch folder structure for the dropdown, excluding the current folder
