--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_CreateEditMemberFollowUp.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_CreateEditMemberFollowUp.cshtml
@@ -74,8 +74,7 @@
         <button type="submit" id="saveDraft" class="btn btn-success" data-test-selector="linkSave" onclick="GymMemberDetails.SaveFollowup(); return false;">
             @AdminResources.LabelSave
         </button>
-
-        <button type="button" class="btn btn-soft-secondary btn-sm" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-secondary ft-x" data-bs-dismiss="modal">Cancel</button>
     </div>
 }
 @Html.Partial("_ValidationScriptsPartial")
