--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymDashboard/GymOperatorDashboard.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymDashboard/GymOperatorDashboard.cshtml
@@ -60,7 +60,7 @@
                 BackgroundColor = JsonConvert.SerializeObject(backgroundColor),
             };
 }
-<div class="page-content">
+<div class="page-content dashboard-wrapper">
     <div class="container-fluid">
         <!-- Page-Title -->
         <div class="row">
@@ -194,7 +194,7 @@
                     <div class="card-body">
                         <div class="row d-flex justify-content-center">
                             <div class="col">
-                                <p class="text-dark mb-0 fw-semibold">Last @Model.NumberOfDaysRecord Day's Collection</p>
+                                <p class="text-dark mb-0 fw-semibold">Last @Model.NumberOfDaysRecord Days Collection</p>
                                 <h3 class="m-0">@AdminGeneralHelper.FormatPriceWithCurrency(@Model.DaywiseTotalCollection)</h3>
                                 <p class="mb-0 text-truncate text-muted">&nbsp;@* <span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today *@</p>
                             </div>
@@ -244,26 +244,9 @@
                 </div><!--end card-->
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-9">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="row align-items-center">
-                            <div class="col">
-                                <h4 class="card-title">Last @Model.NumberOfDaysRecord Day's Financial Overview</h4>
-                            </div>
-                        </div>
-                    </div><!--end card-header-->
-                    <div class="card-body">
-                        <div class="text-center" style="position: relative; padding-top:0px !important">
-                            @Html.Partial("~/Views/Shared/Charts/_BarChart.cshtml", transactionOverviewModel)
-                        </div><!--end card-body-->
-                    </div><!--end card-body-->
-                </div><!--end card-->
-            </div>
-
-            <div class="col-lg-3">
-                <div class="card">
+        <div class="row mb-3">
+            <div class="col-lg-4">
+                <div class="card h-100">
                     <div class="card-header">
                         <div class="row align-items-center">
                             <div class="col">
@@ -271,64 +254,15 @@
                             </div>
                         </div>
                     </div><!--end card-header-->
-                    <div class="card-body">
+                    <div class="card-body scroll-wrapper">
                         <div class="text-center" style="position: relative; padding-top:0px !important">
                             @Html.Partial("~/Views/Shared/Charts/_PieChart.cshtml", activeInActiveMemberPieChart)
                         </div><!--end card-body-->
                     </div><!--end card-->
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-9">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="row align-items-center">
-                            <div class="col">
-                                <h4 class="card-title">Upcoming Plan Expiration Members(In @Model.NumberOfDaysRecord Day's)</h4>
-                            </div><!--end col-->
-                        </div>  <!--end row-->
-                    </div><!--end card-header-->
-                    <div class="card-body">
-                        <div class="table-responsive browser_users">
-                            <table class="table mb-0">
-                                <thead class="thead-light">
-                                    <tr>
-                                        <th class="border-top-0">Name</th>
-                                        <th class="border-top-0">Contact Number</th>
-                                        <th class="border-top-0">Plan Name</th>
-                                        <th class="border-top-0">Plan Duration</th>
-                                        <th class="border-top-0">Days Until Expiry</th>
-                                    </tr><!--end tr-->
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model?.GymUpcomingPlanExpirationMembersList)
-                                    {
-                                        <tr>
-                                            <td><a href="/gymmemberdetails/UpdateMemberPersonalDetails?gymMemberDetailId=@item.GymMemberDetailId&personId=@item.PersonId" class="text-primary">@item.FirstName @item.LastName</a></td>
-                                            <td>@item.MobileNumber</td>
-                                            <td>@item.MembershipPlanName</td>
-                                            <td>@item.PlanStartDate.ToCoditechDateFormat() To @item.PlanDurationExpirationDate.ToCoditechDateFormat()</td>
-                                            <td>
-                                                @if (item.PlanDurationExpiredInDays == 1)
-                                                {
-                                                    @(item.PlanDurationExpiredInDays + " Day Left")
-                                                }
-                                                else
-                                                {
-                                                    @(item.PlanDurationExpiredInDays + " Day's Left")
-                                                }
-                                            </td>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table> <!--end table-->
-                        </div><!--end /div-->
-                    </div><!--end card-body-->
-                </div><!--end card-->
-            </div> <!--end col-->
-            <div class="col-lg-3">
-                <div class="card">
+            <div class="col-lg-4">
+                <div class="card h-100">
                     <div class="card-header">
                         <div class="row align-items-center">
                             <div class="col">
@@ -336,7 +270,7 @@
                             </div><!--end col-->
                         </div>  <!--end row-->
                     </div><!--end card-header-->
-                    <div class="card-body">
+                    <div class="card-body scroll-wrapper">
                         @{
                             decimal? sum = Model?.RevenueByPaymentModeList?.Sum(x => x.BillAmount);
                         }
@@ -361,34 +295,16 @@
                     </div>
                 </div><!--end card-->
             </div> <!--end col-->
-        </div><!--end row-->
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="card">
+            <div class="col-lg-4">
+                <div class="card h-100">
                     <div class="card-header">
                         <div class="row align-items-center">
                             <div class="col">
-                                <h4 class="card-title">Lead Source</h4>
+                                <h4 class="card-title">Current Month Events</h4>
                             </div><!--end col-->
                         </div>  <!--end row-->
                     </div><!--end card-header-->
-                    <div class="card-body" style="position: relative;">
-                        <div class="" style="position: relative;">
-                            @Html.Partial("~/Views/Shared/Charts/_BarChart.cshtml", leadGenerationSourceModel)
-                        </div>
-                    </div><!--end card-body-->
-                </div><!--end card-->
-            </div> <!--end col-->
-            <div class="col-lg-6">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="row align-items-center">
-                            <div class="col">
-                                <h4 class="card-title">Upcoming Events</h4>
-                            </div><!--end col-->
-                        </div>  <!--end row-->
-                    </div><!--end card-header-->
-                    <div class="card-body">
+                    <div class="card-body scroll-wrapper">
                         <div class="analytic-dash-activity" data-simplebar="init">
                             <div class="simplebar-wrapper" style="margin: 0px;">
                                 <div class="simplebar-height-auto-observer-wrapper"><div class="simplebar-height-auto-observer"></div></div><div class="simplebar-mask">
@@ -438,5 +354,90 @@
                 </div><!--end card-->
             </div> <!--end col-->
         </div>
+        <div class="row mb-3">
+            <div class="col-lg-6">
+                <div class="card h-100">
+                    <div class="card-header">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h4 class="card-title">Last @Model.NumberOfDaysRecord Day's Financial Overview</h4>
+                            </div>
+                        </div>
+                    </div><!--end card-header-->
+                    <div class="card-body ">
+                        <div class="text-center" style="position: relative; padding-top:0px !important">
+                            @Html.Partial("~/Views/Shared/Charts/_BarChart.cshtml", transactionOverviewModel)
+                        </div><!--end card-body-->
+                    </div><!--end card-body-->
+                </div><!--end card-->
+            </div>   
+            <div class="col-lg-6">
+                <div class="card h-100">
+                    <div class="card-header">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h4 class="card-title">Lead Source</h4>
+                            </div><!--end col-->
+                        </div>  <!--end row-->
+                    </div><!--end card-header-->
+                    <div class="card-body scroll-wrapper">
+                        <div class="" style="position: relative;">
+                            @Html.Partial("~/Views/Shared/Charts/_BarChart.cshtml", leadGenerationSourceModel)
+                        </div>
+                    </div><!--end card-body-->
+                </div><!--end card-->
+            </div> <!--end col-->
+        </div>
+        <div class="row mb-3">
+        
+            <div class="col-lg-12">
+                <div class="card h-100">
+                    <div class="card-header">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h4 class="card-title">Upcoming Plan Expiration Members(In @Model.NumberOfDaysRecord Day's)</h4>
+                            </div><!--end col-->
+                        </div>  <!--end row-->
+                    </div><!--end card-header-->
+                    <div class="card-body scroll-wrapper">
+                        <div class="table-responsive browser_users">
+                            <table class="table mb-0">
+                                <thead class="thead-light">
+                                    <tr>
+                                        <th class="border-top-0">Name</th>
+                                        <th class="border-top-0">Contact Number</th>
+                                        <th class="border-top-0">Plan Name</th>
+                                        <th class="border-top-0">Plan Duration</th>
+                                        <th class="border-top-0">Days Until Expiry</th>
+                                    </tr><!--end tr-->
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model?.GymUpcomingPlanExpirationMembersList)
+                                    {
+                                        <tr>
+                                            <td><a href="/gymmemberdetails/UpdateMemberPersonalDetails?gymMemberDetailId=@item.GymMemberDetailId&personId=@item.PersonId" class="text-primary">@item.FirstName @item.LastName</a></td>
+                                            <td>@item.MobileNumber</td>
+                                            <td>@item.MembershipPlanName</td>
+                                            <td>@item.PlanStartDate.ToCoditechDateFormat() To @item.PlanDurationExpirationDate.ToCoditechDateFormat()</td>
+                                            <td>
+                                                @if (item.PlanDurationExpiredInDays == 1)
+                                                {
+                                                    @(item.PlanDurationExpiredInDays + " Day Left")
+                                                }
+                                                else
+                                                {
+                                                    @(item.PlanDurationExpiredInDays + " Day's Left")
+                                                }
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table> <!--end table-->
+                        </div><!--end /div-->
+                    </div><!--end card-body-->
+                </div><!--end card-->
+            </div> <!--end col-->
+        </div>
     </div><!-- container -->
 </div>
+
