--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymDashboard/GymOwnerDashboard.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymDashboard/GymOwnerDashboard.cshtml
@@ -88,15 +88,18 @@
             <div class="col-sm-12">
                 <div class="page-title-box">
                     <div class="row">
-                        <div class="col">
+                        @* <div class="col"> *@
                             @*  <h4 class="page-title">Analytics</h4>
                             <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="javascript:void(0);">Dastone</a></li>
                             <li class="breadcrumb-item"><a href="javascript:void(0);">Dashboard</a></li>
                             <li class="breadcrumb-item active">Analytics</li>
                             </ol> *@
+                       @*  </div> *@
+                        <div class="col text-end "id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
+                            @Html.Partial("~/Views/Shared/Dashboard/_DashboardDaysDropDown.cshtml", Model.NumberOfDaysRecord)
                         </div>
-                        <div class="col-auto align-self-center">
+                        <div class="col-auto align-self-center" class="col text-end">
                             <a href="#" class="btn btn-sm btn-outline-primary" id="Dash_Date">
                                 <span class="day-name" id="Day_Name">Today:</span>&nbsp;
                                 <span class="" id="Select_date">@System.DateTime.Now.ToCoditechDateFormat()</span>
