Code check-in for joiningcode correction

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseJoiningCode/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseJoiningCode/_List.cshtml
@@ -27,7 +27,8 @@
                                 @*  <a href="../@controllerName/SendDetails" title="Send" class="btn btn-sm btn-soft-success btn-circle"><i data-feather="send" style="width: 20px; height: 20px;"></i></a> *@
                                 @if (item.IsExpired==false)
                                 {
-                                    <a data-bs-toggle="modal" data-bs-target="#@sendDetailsModel.ModelPopUpId" href="javascritp:void(0)" onclick="OrganisationCentrewiseJoiningCode.GetOrganisationCentrewiseJoiningCodeSend('@sendDetailsModel.ModalContentId','@item.JoiningCode')" title="Send" class="btn btn-sm btn-soft-success btn-circle"><i data-feather="send" style="width: 20px; height: 20px;"></i></a>
+
+                                    <a data-bs-toggle="modal" data-bs-target="#@sendDetailsModel.ModelPopUpId" href="javascritp:void(0)" onclick="OrganisationCentrewiseJoiningCode.GetOrganisationCentrewiseJoiningCodeSend('@sendDetailsModel.ModalContentId','@item.JoiningCode')" title="Send" class="btn btn-sm btn-soft-success btn-circle"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg></a>
                                 }
                             </td>
                         </tr>
