--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralFinancialYearMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralFinancialYearMaster/CreateEdit.cshtml
@@ -53,6 +53,22 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row-lg-grow-1">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.IsCurrentFinancialYear, new { @class = "form-label" })
+                                    <div class="form-check">
+                                        @Html.CheckBoxFor(x => x.IsCurrentFinancialYear, new { @class = "form-check-input" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row-lg-6">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.IsYearEnd, new { @class = "form-label" })
+                                    <div class="form-check">
+                                        @Html.CheckBoxFor(x => x.IsYearEnd, new { @class = "form-check-input" })
+                                    </div>
+                                </div>
+                            </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
