--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
@@ -93,7 +93,7 @@
     <div class="col-lg-3">
         <div class="mb-3">
             @Html.LabelFor(x => x.EmailId, new { @class = "form-label"})
-            @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control" })
+            @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control", onkeypress = "return CoditechCommon.AvoidSpacing()" })
             @Html.ValidationMessageFor(x => x.EmailId)
         </div>
     </div>
