--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymDashboard/GymOwnerDashboard.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymDashboard/GymOwnerDashboard.cshtml
@@ -467,7 +467,7 @@
                                                 }
                                                 else
                                                 {
-                                                    @(item.PlanDurationExpiredInDays + " Day's Left")
+                                                    @(item.PlanDurationExpiredInDays + " Days Left")
                                                 }
                                             </td>
                                         </tr>
