--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/GymWorkoutPlan.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/GymWorkoutPlan.cshtml
@@ -118,14 +118,14 @@
     </div>
 </div>
 
-@section scripts {
+@* @section scripts {
     <script type="text/javascript">
         $(function () {
             $('#NumberOfDaysPerWeek').val('');
             $('#NumberOfWeeks').val('');
         }); 
     </script> 
-}
+} *@
 
 
 
